@@ -1,3 +1,9 @@
+2010-04-07  Jon Nistor  <nistor@snickers.org>
+
+        * perllib/Torrus/DevDiscover/Arbor_E.pm:
+        New parameter: Arbor_E::disable-e100-mem
+        Added memory usage per CPU for the e100 series devices
+
 2010-04-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/ConfigTree.pm,
